src/test/deca/syntax/valid/mul_floatvar_float_mul_int.deca
// Description :
//
//      Test syntaxiquement correct de la multiplication  d'un float et d'un int dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 06/06/2023 par gl03


{
    float y=2.5*3;
}